--- a/HealthCare.UI/Views/Partials/_MenuLinksPartial.cshtml
+++ b/HealthCare.UI/Views/Partials/_MenuLinksPartial.cshtml
@@ -9,6 +9,6 @@
             @Html.ActionLink("Privacy", "Privacy", "Home")
         </li>
         <li class="@Model.LIClass">
-            @Html.ActionLink("Contact", "Contact", "Home")
+            @Html.ActionLink("Contact", "Index", "Contact")
         </li>
     </ul>
