--- a/HealthCare.UI/Views/Home/Index.cshtml
+++ b/HealthCare.UI/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
                         <div class="row">
                             <div class="col">
                                 <div class="home_content_inner">
-                                    <div class="home_title"><h1>Medicine made with care 1</h1></div>
+                                    <div class="home_title"><h1><MLT key="Deneme">Medicine made with care 1</MLT></h1></div>
                                     <div class="home_text">
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus vestibulum mauris quis aliquam. Integer accumsan sodales odio, id tempus velit ullamcorper id. Quisque at erat eu.</p>
                                     </div>
@@ -54,7 +54,7 @@
                     </div>
                 </div>
             </div>
-
+            
             <!-- Slider Item -->
             <div class="owl-item">
                 <div class="home_slider_background" style="background-image:url(@Globals.CONTENT_FOLDER_ROOT_PATH/images/home_background_1.jpg)"></div>
