--- a/HealthCare.UI/Views/_ViewImports.cshtml
+++ b/HealthCare.UI/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using HealthCare.UI
 @using HealthCare.UI.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, HealthCare.UI
