Translation service implemented

--- a/HealthCare.UI/Views/Home/Index.cshtml
+++ b/HealthCare.UI/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
                         <div class="row">
                             <div class="col">
                                 <div class="home_content_inner">
-                                    <div class="home_title"><h1><MLT key="Deneme">Medicine made with care 1</MLT></h1></div>
+                                    <div class="home_title"><h1><MLT key="Hello">Medicine made with care 1</MLT></h1></div>
                                     <div class="home_text">
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus vestibulum mauris quis aliquam. Integer accumsan sodales odio, id tempus velit ullamcorper id. Quisque at erat eu.</p>
                                     </div>
