Translation Popup has been implemented

--- a/HealthCare.UI/Views/Home/Index.cshtml
+++ b/HealthCare.UI/Views/Home/Index.cshtml
@@ -21,10 +21,10 @@
                                 <div class="home_content_inner">
                                     <div class="home_title"><h1><MLT key="Hello">Medicine made with care 1</MLT></h1></div>
                                     <div class="home_text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus vestibulum mauris quis aliquam. Integer accumsan sodales odio, id tempus velit ullamcorper id. Quisque at erat eu.</p>
+                                        <p>Lorem ipsum dolor sit amet, adipiscing elit. Mauris tempus vestibulum mauris quis aliquam. Integer accumsan sodales odio, id tempus velit ullamcorper id. Quisque at erat eu.</p>
                                     </div>
                                     <div class="button home_button">
-                                        <a href="#">read more</a>
+                                        <a href="#"><MLT key="ReadMore">read more</MLT></a>
                                     </div>
                                 </div>
                             </div>
@@ -54,7 +54,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <!-- Slider Item -->
             <div class="owl-item">
                 <div class="home_slider_background" style="background-image:url(@Globals.CONTENT_FOLDER_ROOT_PATH/images/home_background_1.jpg)"></div>
@@ -94,11 +94,11 @@
             <div class="col-lg-4 box_col">
                 <div class="box working_hours">
                     <div class="box_icon d-flex flex-column align-items-start justify-content-center"><div style="width:29px; height:29px;"><img src="images/alarm-clock.svg" alt=""></div></div>
-                    <div class="box_title">Working Hours</div>
+                    <div class="box_title"> <MLT key="WorkingHours">Working Hours</MLT></div>
                     <div class="working_hours_list">
                         <ul>
                             <li class="d-flex flex-row align-items-center justify-content-start">
-                                <div>Monday – Friday</div>
+                                <div><MLT Key="Monday">Monday</MLT> – <MLT Key="Friday">Friday</MLT></div>
                                 <div class="ml-auto">8.00 – 19.00</div>
                             </li>
                             <li class="d-flex flex-row align-items-center justify-content-start">
