--- a/HealthCare.UI/Views/Shared/_Layout.cshtml
+++ b/HealthCare.UI/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
     <script src="@Globals.CONTENT_FOLDER_ROOT_PATH/js/custom.js"></script>
 </head>
 <body>
-
+    @{Html.RenderPartial($"../Partials/_EditTranslationsPartial"); }
     <div class="super_container">
 
         <!-- Header -->
