--- a/HealthCare.UI/Views/Home/Index.cshtml
+++ b/HealthCare.UI/Views/Home/Index.cshtml
@@ -118,7 +118,7 @@
             <div class="col-lg-4 box_col">
                 <div class="box box_appointments">
                     <div class="box_icon d-flex flex-column align-items-start justify-content-center"><div style="width: 29px; height:29px;"><img src="images/phone-call.svg" alt=""></div></div>
-                    <div class="box_title">Appointments</div>
+                    <div class="box_title"><MLT Key="Appoinments">Appointments</MLT></div>
                     <div class="box_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam cons equat semper sollicitudin.</div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
             <div class="col-lg-4 box_col">
                 <div class="box box_emergency">
                     <div class="box_icon d-flex flex-column align-items-start justify-content-center"><div style="width: 37px; height:37px; margin-left:-4px;"><img src="images/bell.svg" alt=""></div></div>
-                    <div class="box_title">Emergency Cases</div>
+                    <div class="box_title"><MLT Key="EmergencyCases">Emergency Cases</MLT></div>
                     <div class="box_phone">+56 273 45678 235</div>
                     <div class="box_emergency_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo.</div>
                 </div>
@@ -171,7 +171,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <div class="section_title section_title_light"><h2>Our Medical Departments</h2></div>
+                <div class="section_title section_title_light"><h2><MLT Key="OurMedicalDepartments">Our Medical Departments</MLT></h2></div>
             </div>
         </div>
         <div class="row departments_row row-md-eq-height">
@@ -215,7 +215,7 @@
                     <div class="dept_text">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dap ibus massa. Pellen tesque in luctus ex.</p>
                     </div>
-                    <div class="button dept_button"><a href="#">read more</a></div>
+                    <div class="button dept_button"><a href="#"><MLT Key="ReadMore">read more</MLT></a></div>
                 </div>
             </div>
         </div>
@@ -228,7 +228,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <div class="section_title"><h2>Our Featured Services</h2></div>
+                <div class="section_title"><h2><MLT Key="OurFeaturedServices">Our Featured Services</MLT></h2></div>
             </div>
         </div>
         <div class="row services_row">
@@ -277,7 +277,7 @@
                 <a href="services.html">
                     <div class="service text-center trans_200">
                         <div class="service_icon"><img class="svg" src="@Globals.CONTENT_FOLDER_ROOT_PATH/images/service_4.svg" alt=""></div>
-                        <div class="service_title trans_200">Dentistry</div>
+                        <div class="service_title trans_200"><MLT Key="Dentistry">Dentistry</MLT></div>
                         <div class="service_text">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
                         </div>
@@ -290,7 +290,7 @@
                 <a href="services.html">
                     <div class="service text-center trans_200">
                         <div class="service_icon"><img class="svg" src="@Globals.CONTENT_FOLDER_ROOT_PATH/images/service_5.svg" alt=""></div>
-                        <div class="service_title trans_200">Neonatology</div>
+                        <div class="service_title trans_200"><MLT Key="Neonatology">Neonatology</MLT></div>
                         <div class="service_text">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
                         </div>
@@ -303,7 +303,7 @@
                 <a href="services.html">
                     <div class="service text-center trans_200">
                         <div class="service_icon"><img class="svg" src="@Globals.CONTENT_FOLDER_ROOT_PATH/images/service_6.svg" alt=""></div>
-                        <div class="service_title trans_200">Biochemistry</div>
+                        <div class="service_title trans_200"><MLT Key="Biochemistry">Biochemistry</MLT></div>
                         <div class="service_text">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
                         </div>
