Login in ui side

--- a/HealthCare.UI/Views/Partials/_MenuLinksPartial.cshtml
+++ b/HealthCare.UI/Views/Partials/_MenuLinksPartial.cshtml
@@ -10,5 +10,9 @@
         </li>
         <li class="@Model.LIClass">
             @Html.ActionLink("Contact", "Index", "Contact")
+        </li>        
+        <li class="@Model.LIClass">
+            @Html.ActionLink("Contact", "Index", "Contact")
         </li>
+
     </ul>
