--- a/HealthCare.UI/Views/Shared/_Layout.cshtml
+++ b/HealthCare.UI/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@model BaseViewModel
+@{
+    var LayoutModel = Model ?? new BaseViewModel();
+
+}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -57,7 +62,7 @@
                             <div class="header_content d-flex flex-row align-items-center justify-content-start">
                                 <nav class="main_nav ml-auto">
 
-                                    @{Html.RenderPartial($"../Partials/_MenuLinksPartial", new MenuLinksPartialModel());}
+                                    @{Html.RenderPartial($"../Partials/_MenuLinksPartial", new MenuLinksPartialModel(loggedInUser: LayoutModel.LoginUser));}
 
                                 </nav>
                                 <div class="hamburger ml-auto"><i class="fa fa-bars" aria-hidden="true"></i></div>
@@ -102,7 +107,7 @@
             <!-- Menu Items -->
             <div class="menu_inner menu_mm">
                 <div class="menu menu_mm">
-                    @{Html.RenderPartial($"../Partials/_MenuLinksPartial", new MenuLinksPartialModel("menu_list menu_mm", "menu_item menu_mm")); }
+                    @{Html.RenderPartial($"../Partials/_MenuLinksPartial", new MenuLinksPartialModel("menu_list menu_mm", "menu_item menu_mm",LayoutModel.LoginUser)); }
                 </div>
                 <div class="menu_extra">
                     <div class="menu_appointment"><a href="#">Request an Appointment</a></div>
