--- a/HealthCare.UI/Views/Partials/_MenuLinksPartial.cshtml
+++ b/HealthCare.UI/Views/Partials/_MenuLinksPartial.cshtml
@@ -1,29 +1,23 @@
 ﻿@model MenuLinksPartialModel
 
-    <ul class="@Model.ULClass">
-        <li class="@Model.LIClass"><a href="index.html">Home</a></li>
-        <li class="@Model.LIClass"><a href="about.html">About us</a></li>
-        <li class="@Model.LIClass"><a href="services.html">Services</a></li>
-        <li class="@Model.LIClass"><a href="news.html">News</a></li>
+<ul class="@Model.ULClass">
+    <li class="@Model.LIClass"><a href="index.html">Home</a></li>
+    <li class="@Model.LIClass"><a href="about.html">About us</a></li>
+    <li class="@Model.LIClass"><a href="services.html">Services</a></li>
+    <li class="@Model.LIClass"><a href="news.html">News</a></li>
+    <li class="@Model.LIClass">
+        @Html.ActionLink("Privacy", "Privacy", "Home")
+    </li>
+    <li class="@Model.LIClass">
+        @Html.ActionLink("Contact", "Index", "Contact")
+    </li>
+
+
+    @if (Model.LoggedInUser != null)
+    {
         <li class="@Model.LIClass">
-            @Html.ActionLink("Privacy", "Privacy", "Home")
+            @Html.ActionLink("Logout", "Logout", "Login")
         </li>
-        <li class="@Model.LIClass">
-            @Html.ActionLink("Contact", "Index", "Contact")
-        </li>
+    }
 
-
-        @if (Model.LoggedInUser == null)
-        {
-            <li class="@Model.LIClass">
-                @Html.ActionLink("Login", "Index", "Login")
-            </li>
-        }
-        else
-        {
-            <li class="@Model.LIClass">
-                @Html.ActionLink("Logout", "Logout", "Login")
-            </li>
-        }
-
-    </ul>
+</ul>
