--- a/HealthCare.UI/Views/Shared/_Layout.cshtml
+++ b/HealthCare.UI/Views/Shared/_Layout.cshtml
@@ -74,27 +74,29 @@
                 </div>
             </div>
 
-            <!-- Logo -->
-            <div class="logo_container_outer">
-                <div class="container">
-                    <div class="row">
-                        <div class="col">
-                            <div class="logo_container">
-                                <a href="#">
-                                    <div class="logo_content d-flex flex-column align-items-start justify-content-center">
-                                        <div class="logo_line"></div>
-                                        <div class="logo d-flex flex-row align-items-center justify-content-center">
-                                            <div class="logo_text">Care<span>Med</span></div>
-                                            <div class="logo_box">+</div>
-                                        </div>
-                                        <div class="logo_sub">Health Care Center</div>
+            @{Html.RenderPartial($"../Partials/_SelectLanguagePartial");}
+
+        <!-- Logo -->
+        <div class="logo_container_outer">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="logo_container">
+                            <a href="#">
+                                <div class="logo_content d-flex flex-column align-items-start justify-content-center">
+                                    <div class="logo_line"></div>
+                                    <div class="logo d-flex flex-row align-items-center justify-content-center">
+                                        <div class="logo_text">Care<span>Med</span></div>
+                                        <div class="logo_box">+</div>
                                     </div>
-                                </a>
-                            </div>
+                                    <div class="logo_sub">Health Care Center</div>
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
 
         </header>
 
