--- a/HealthCare.UI/Views/Partials/_SelectLanguagePartial.cshtml
+++ b/HealthCare.UI/Views/Partials/_SelectLanguagePartial.cshtml
@@ -17,7 +17,7 @@
 
 
 <form id="selectLanguage" asp-controller="Home" asp-action="SetLanguage" asp-route-returnUrl="@Context.Request.Path" method="post" class="form-horizontal" role="form">
-    <select name="culture"
+    <select class="custom-select" name="culture"
             asp-for="@requestCulture.RequestCulture.UICulture.Name"
             asp-items="@cultureItems"
             onchange="this.form.submit()"
