--- a/HealthCare.UI/Views/_ViewImports.cshtml
+++ b/HealthCare.UI/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using HealthCare.UI.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, HealthCare.UI
+@inject HealthCare.UI.Contracts.LocalizationServiceBase Localization 
