--- a/HealthCare.UI/Views/Home/Index.cshtml
+++ b/HealthCare.UI/Views/Home/Index.cshtml
@@ -102,11 +102,11 @@
                                 <div class="ml-auto">8.00 – 19.00</div>
                             </li>
                             <li class="d-flex flex-row align-items-center justify-content-start">
-                                <div>Saturday</div>
+                                <div>@Localization.Html("SATURDAY", "Saturday")</div>
                                 <div class="ml-auto">9.30 – 17.00</div>
                             </li>
                             <li class="d-flex flex-row align-items-center justify-content-start">
-                                <div>Sunday</div>
+                                <div>@Localization.Html("SUNDAY", "Sunday")</div>
                                 <div class="ml-auto">9.30 – 15.00</div>
                             </li>
                         </ul>
