--- a/HealthCare.UI/Views/Home/Index.cshtml
+++ b/HealthCare.UI/Views/Home/Index.cshtml
@@ -128,7 +128,7 @@
                 <div class="box box_emergency">
                     <div class="box_icon d-flex flex-column align-items-start justify-content-center"><div style="width: 37px; height:37px; margin-left:-4px;"><img src="images/bell.svg" alt=""></div></div>
                     <div class="box_title"><MLT Key="EmergencyCases">Emergency Cases</MLT></div>
-                    <div class="box_phone">+56 273 45678 235</div>
+                    <div class="ONTACT_PHONE_NUMBER">+56 273 45678 235</div>
                     <div class="box_emergency_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo.</div>
                 </div>
             </div>
@@ -309,23 +309,6 @@
                         </div>
                     </div>
                 </a>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- Call to action -->
-
-<div class="cta">
-    <div class="cta_background parallax-window" data-parallax="scroll" data-image-src="@Globals.CONTENT_FOLDER_ROOT_PATH/images/cta.jpg" data-speed="0.8"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <div class="cta_content text-center">
-                    <h2>Need a personal health plan?</h2>
-                    <p>Duis massa massa, mollis vel ullamcorper quis, finibus et urna. Aliquam ac eleifend metus. Ut sollicitudin risus ex</p>
-                    <div class="button cta_button"><a href="#">request a plan</a></div>
-                </div>
             </div>
         </div>
     </div>
