--- a/HealthCare.UI/Views/Contact/Index.cshtml
+++ b/HealthCare.UI/Views/Contact/Index.cshtml
@@ -21,14 +21,19 @@
             <div class="col-lg-6">
                 <div class="section_title"><h2>Get in touch</h2></div>
                 <div class="contact_text">
-                    <p> Contact burasımış hacı. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dapibus massa.</p>
+                    <p>
+                        <MLT key="CONTACT_UPPER_TEXT">CONTACT_UPPER_TEXT</MLT>
+                        
+                    </p>
                 </div>
                 <ul class="contact_about_list">
-                    <li><div class="contact_about_icon"><img src="@Globals.CONTENT_FOLDER_ROOT_PATH/images/phone-call.svg" alt=""></div><span>+45 677 8993000 223</span></li>
-                    <li><div class="contact_about_icon"><img src="@Globals.CONTENT_FOLDER_ROOT_PATH/images/envelope.svg" alt=""></div><span>office@template.com</span></li>
-                    <li><div class="contact_about_icon"><img src="@Globals.CONTENT_FOLDER_ROOT_PATH/images/placeholder.svg" alt=""></div><span>Main Str. no 45-46, b3, 56832, Los Angeles, CA</span></li>
+                    <li><div class="contact_about_icon"><img src="@Globals.CONTENT_FOLDER_ROOT_PATH/images/phone-call.svg" alt=""></div><span> <MLT key="CONTACT_PHONE_NUMBER">+90 554 4430903</MLT></span></li>
+                    <li><div class="contact_about_icon"><img src="@Globals.CONTENT_FOLDER_ROOT_PATH/images/envelope.svg" alt=""></div><span><MLT key="CONTACT_EMAIL">akanmf@yahoo.com</MLT></span></li>
+                    <li><div class="contact_about_icon"><img src="@Globals.CONTENT_FOLDER_ROOT_PATH/images/placeholder.svg" alt=""></div><span><MLT key="CONTACT_ADDRESS">Ercument Batanay Sokak ATASEHIR/ISTANBUL</MLT></span></li>
                 </ul>
             </div>
+
+
 
             <!-- Contact Form -->
             <div class="col-lg-6 form_col">
@@ -43,8 +48,8 @@
                             </div>
                         </div>
                         <div class="input_container"><input name="PhoneNumber" type="text" class="contact_input" placeholder="Phone Number" required="required"></div>
-                        <div class="input_container"><textarea name="Message" class="contact_input contact_text_area" placeholder="Message" required="required"></textarea></div>
-                        <button class="button contact_button" type="submit">Send</button>
+                        <div class="input_container"><textarea name="Message" class="contact_input contact_text_area" placeholder="Message" required="required"></textarea></div>                        
+                        <button class="button home_button"><a href="#">send</a></button>
                     </form>
                 </div>
             </div>
@@ -64,24 +69,24 @@
                                 <div id="map"></div>
                             </div>
                         </div>
-                    </div>                    
+                    </div>
 
                     <!-- Working Hours -->
                     <div class="box working_hours">
-                        <div class="box_icon d-flex flex-column align-items-start justify-content-center"><div style="width:29px; height:29px;"><img src="@Globals.CONTENT_FOLDER_ROOT_PATH/images/alarm-clock.svg" alt=""></div></div>
-                        <div class="box_title">Working Hours</div>
+                        <div class="box_icon d-flex flex-column align-items-start justify-content-center"><div style="width:29px; height:29px;"><img src="images/alarm-clock.svg" alt=""></div></div>
+                        <div class="box_title"> <MLT key="WorkingHours">Working Hours</MLT></div>
                         <div class="working_hours_list">
                             <ul>
                                 <li class="d-flex flex-row align-items-center justify-content-start">
-                                    <div>Monday – Friday</div>
+                                    <div><MLT Key="Monday">Monday</MLT> – <MLT Key="Friday">Friday</MLT></div>
                                     <div class="ml-auto">8.00 – 19.00</div>
                                 </li>
                                 <li class="d-flex flex-row align-items-center justify-content-start">
-                                    <div>Saturday</div>
+                                    <div>@Localization.Html("SATURDAY", "Saturday")</div>
                                     <div class="ml-auto">9.30 – 17.00</div>
                                 </li>
                                 <li class="d-flex flex-row align-items-center justify-content-start">
-                                    <div>Sunday</div>
+                                    <div>@Localization.Html("SUNDAY", "Sunday")</div>
                                     <div class="ml-auto">9.30 – 15.00</div>
                                 </li>
                             </ul>
