--- a/HealthCare.UI/Views/Shared/_Layout.cshtml
+++ b/HealthCare.UI/Views/Shared/_Layout.cshtml
@@ -144,70 +144,32 @@
             <div class="container">
                 <div class="row">
 
-                    <!-- Footer - About -->
+                    <!-- Footer - Links -->
                     <div class="col-lg-4 footer_col">
                         <div class="footer_about">
-                            <div class="footer_logo_container">
-                                <a href="#" class="d-flex flex-column align-items-center justify-content-center">
-                                    <div class="logo_content">
-                                        <div class="logo d-flex flex-row align-items-center justify-content-center">
-                                            <div class="logo_text">Care<span>Med</span></div>
-                                            <div class="logo_box">+</div>
-                                        </div>
-                                        <div class="logo_sub">Health Care Center</div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="footer_about_text">
-                                <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum.</p>
-                            </div>
                             <ul class="footer_about_list">
-                                <li><div class="footer_about_icon"><img src="@Globals.CONTENT_FOLDER_ROOT_PATH/images/phone-call.svg" alt=""></div><span><MLT Key="OFFICE_PHONE_NUMBER">+45 677 8993000 223</MLT></span></li>
-                                <li><div class="footer_about_icon"><img src="@Globals.CONTENT_FOLDER_ROOT_PATH/images/envelope.svg" alt=""></div><span><MLT Key="OFFICE_MAIL_ADDRESS">office@template.com</MLT></span></li>
-                                <li><div class="footer_about_icon"><img src="@Globals.CONTENT_FOLDER_ROOT_PATH/images/placeholder.svg" alt=""></div><span><MLT Key="OFFICE_ADDRESS">Main Str. no 45-46, b3, 56832, Los Angeles, CA</MLT></span></li>
+                                <li><div class="footer_about_icon"><img src="@Globals.CONTENT_FOLDER_ROOT_PATH/images/phone-call.svg" alt=""></div><span><MLT Key="CONTACT_PHONE_NUMBER">+90 554 4430903</MLT></span></li>
+                                <li><div class="footer_about_icon"><img src="@Globals.CONTENT_FOLDER_ROOT_PATH/images/envelope.svg" alt=""></div><span><MLT Key="CONTACT_EMAIL">akanmf@yahoo.com</MLT></span></li>
+                                <li><div class="footer_about_icon"><img src="@Globals.CONTENT_FOLDER_ROOT_PATH/images/placeholder.svg" alt=""></div><span><MLT Key="CONTACT_ADDRESS">Ercument Batanay Sokak ATASEHIR/ISTANBUL</MLT></span></li>
                             </ul>
                         </div>
                     </div>
 
+
                     <!-- Footer - Links -->
-                    <div class="col-lg-4 footer_col">
-                        <div class="footer_links footer_column">
-                            <div class="footer_title"><MLT Key="USEFUL_LINKS">Useful Links</MLT></div>
+                    <div class="col-lg-8 footer_col">
+                        <div class="footer_links footer_about">
                             <ul>
-                                <li><a href="#"><MLT Key="TESTIMONIALS">Testimonials</MLT></a></li>
-                                <li><a href="#"><MLT Key="FAQ">FAQ</MLT></a></li>                                
-                                <li><a href="#"><MLT Key="TERMS&CONDITIONS">Terms & Conditions</MLT></a></li>
                                 <li><a href="#"><MLT Key="OUR_PARTNERS">Our Partners</MLT></a></li>
                                 <li><a href="#"><MLT Key="SERVICES">Services</MLT></a></li>
                                 <li><a href="#"><MLT Key="FREE_SERVICES">Free services</MLT></a></li>
                                 <li><a href="#"><MLT Key="ABOUT_US">About us</MLT></a></li>
-                                <li><a href="#"><MLT Key="NEWS">News</MLT></a></li>
-                                <li><a href="#"><MLT Key="CONTACT">Contact</MLT></a></li>                                
+                                <li><a href="#"><MLT Key="CONTACT">Contact</MLT></a></li>
                                 <li><a href="#"><MLT Key="FAQ">FAQ</MLT></a></li>
                             </ul>
                         </div>
                     </div>
 
-                    <!-- Footer - News -->
-                    <div class="col-lg-4 footer_col">
-                        <div class="footer_news footer_column">
-                            <div class="footer_title"><MLT Key="USEFUL_LINKS">Useful Links</MLT></div>
-                            <ul>
-                                <li>
-                                    <div class="footer_news_title"><a href="news.html">Aliquam ac eleifend metus</a></div>
-                                    <div class="footer_news_date">March 10, 2018</div>
-                                </li>
-                                <li>
-                                    <div class="footer_news_title"><a href="news.html">Donec in libero sit amet mi vulputate</a></div>
-                                    <div class="footer_news_date">March 10, 2018</div>
-                                </li>
-                                <li>
-                                    <div class="footer_news_title"><a href="news.html">Aliquam ac eleifend metus</a></div>
-                                    <div class="footer_news_date">March 10, 2018</div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -240,8 +202,6 @@
             </div>
         </div>
     </footer>
-    </div>
-
 
 </body>
 </html>
